--- a/hotel-spider-provider/src/main/resources/config/dev/application.properties
+++ b/hotel-spider-provider/src/main/resources/config/dev/application.properties
@@ -55,3 +55,9 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0  
 # 连接超时时间（毫秒）
 spring.redis.timeout=0 
+
+WIN_FILE_PATH=C:/Users/47246/github/hotel-spider/phantomjs-2.1.1-windows/bin/html/
+WIN_JS_PATH=C:/Users/47246/github/hotel-spider/phantomjs-2.1.1-windows/bin/download_as_file.js
+
+FILE_PATH=/usr/hotel-spider/html/
+JS_PATH=/usr/hotel-spider/phantomjs-2.1.1-linux-x86_64/bin/download_as_file.js
