--- a/hotel-spider-domain/pom.xml
+++ b/hotel-spider-domain/pom.xml
@@ -46,6 +46,10 @@
         	<version>1.3.1</version>
       	</dependency>
       	<dependency>
+      		 <groupId>org.springframework</groupId>
+  			<artifactId>spring-tx</artifactId>
+      	</dependency>
+      	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 		</dependency>
