--- a/hotel-spider-web/pom.xml
+++ b/hotel-spider-web/pom.xml
@@ -35,7 +35,10 @@
 				<groupId>com.alibaba</groupId>
             	<artifactId>dubbo</artifactId>
 		</dependency>
-		
+		 <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
